# DeXtrusion

./: README.md  pyproject.toml  setup.py
ijmacros/: deXtrusion_checkAndClearROIs.ijm  deXtrusion_checkAndClearROIs_NonBlocking.ijm
jupyter_notebooks/: deXtrusion_CompareRois.ipynb  deXtrusion_GetRoisFromRawProbaMaps.ipynb  deXtrusion_RetrainNetwork.ipynb  detectEventsOnMovie.ipynb
src/dextrusion/: DeXtrusion.py  Network.py  RoiUtils.py  keras_compat.py
