[build-system]
requires = ["setuptools==68.2.2", "setuptools_scm>=7.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dextrusion"
version = "0.0.11"
description = "DeXtrusion: automatic detection of cell extrusion in epithelial tissu"
license.file = "LICENSE"
readme = "README.md"
requires-python = ">3.8"
authors = [
	{name = "Gaëlle Letort"},
	{name = "Alexis Villars"},
]

classifiers = [
    "Framework :: napari",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
	"matplotlib",
	"numpy<2",
	"opencv-python",
	"tifffile>=2022.2.2",
	"roifile",
	"scikit-image",
	"scikit-learn",
	"scipy",
    "tensorflow<=2.11; sys_platform == 'linux' or sys_platform == 'win32'",
    "tensorflow<=2.11; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "tensorflow>=2.13; sys_platform == 'darwin' and platform_machine == 'arm64'",
	"protobuf<=3.19; sys_platform=='linux' or sys_platform=='win32'",
	"protobuf; sys_platform=='darwin' or platform_machine=='x86_64'",
    "protobuf; sys_platform == 'darwin' and platform_machine == 'arm64'",
	"ipython"
]

[project.urls]
"Bug Tracker" = "https://github.com/Image-Analysis-Hub/dextrusion/issues"
"Documentation" = "https://image-analysis-hub.github.io/dextrusion/"
"Source Code" = "https://github.com/Image-Analysis-Hub/dextrusion"
"User Support" = "https://github.com/Image-Analysis-Hub/dextrusion/issues"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

# Explicitly list packages to include
packages = [
    "dextrusion",
]

